# hbr_campinas_projetos_fase_3_embarcatech_2026

./: README.md
g3/spi_module_st7796/lgvl_editor_interface_example/st7789_pio_lcd_lvgl_sens/: CMakeLists.txt
g3/spi_module_st7796/prototipo_1/st7789_pio_lcd_lvgl_sens/: CMakeLists.txt
g3/spi_module_st7796/prototipo_3/: readme.md
g3/spi_module_st7796/prototipo_3/st7789_pio_lcd_lvgl_sens/: CMakeLists.txt  ad5592r.h  lv_conf.h  main.c  wifi.c  wifi_handler.h
g3/spi_module_st7796/prototipo_3/st7789_pio_lcd_lvgl_sens _3_1/: ft6336u.c  main.c
g3/spi_module_st7796/prototipo_3/st7789_pio_lcd_lvgl_sens _3_1/screens/: screen_animations_gen.c
g3/spi_module_st7796/prototipo_3/st7789_pio_lcd_lvgl_sens/screens/: screen_animations_gen.c  screen_wifi_gen.c
g3/spi_module_st7796/prototipo_4/: readme.md
g3/spi_module_st7796/prototipo_4/st7789_pio_lcd_lvgl_sens/: CMakeLists.txt  ft6336u.h  lv_conf.h  main.c
g3/spi_module_st7796/prototipo_4/st7789_pio_lcd_lvgl_sens/screens/: screen_animations.xml  screen_animations_gen.c
g3/spi_module_st7796/simulador/lv_port_pc_vscode/: CMakeLists.txt  README.md  lv_conf.h  simulator.code-workspace
g3/spi_module_st7796/simulador/lv_port_pc_vscode/src/: main.c
g3/spi_module_st7796/st7789_pio_lcd_lvgl_sens/: CMakeLists.txt  ft6336u.c
g3/spi_module_st7796/teste_i2c/: CMakeLists.txt  readme.md  teste_i2c.c
g3/spi_module_st7796/versao_final/: readme.md
g3/spi_module_st7796/versao_final/st7789_pio_lcd_lvgl_sens/: ad5592r.c
g3/spi_module_st7796/versao_final/st7789_pio_lcd_lvgl_sens/images/: logo_hwit.c
g3/spi_module_st7796/versao_final/st7789_pio_lcd_lvgl_sens/screens/: screen_menu_gen.h  screen_wifi_gen.h
g4/projeto-amigo-perto/: README.md
g4/projeto-amigo-perto/Aplicativo/: README.md  angular.json  blueprint.md  firebase.json  package-lock.json  package.json
g4/projeto-amigo-perto/Aplicativo/src/: index.html  main.ts  styles.css
g4/projeto-amigo-perto/Aplicativo/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  bluetooth-simulation.ts  bluetooth.service.ts  rssi-radar.component.css  rssi-radar.component.html  rssi-radar.component.ts  styles.css
g4/projeto-amigo-perto/Documentação/: README.md
g4/projeto-amigo-perto/Firmware/amigo-perto-fw/: .gitignore  README.md  prj.conf
g4/projeto-amigo-perto/Firmware/amigo-perto-fw/boards/: xiao_ble.overlay
g4/projeto-amigo-perto/Firmware/amigo-perto-fw/src/: main.c
g4/projeto-amigo-perto/Firmware/releases/: amigo-perto-v1.0.0.uf2
g4/projeto-amigo-perto/Hardware/: README.md  main.SchDoc  pcb_amigo_perto.PcbDoc
g5/projeto-final-antonio_carlos_ricardo/: README.md
g5/projeto-final-antonio_carlos_ricardo/DesenvolvimentoDoProjeto/Fase3/Docs/: manual_usuario-0.00.03.md
g5/projeto-final-antonio_carlos_ricardo/DesenvolvimentoDoProjeto/Fase3/Etapa1_Semana3/: Apresentação 0311.pptx
g5/projeto-final-antonio_carlos_ricardo/DesenvolvimentoDoProjeto/Fase3/Etapa2/: README.md  rel_tec_etapa2_semana1.md  rel_tec_etapa2_semana2.md  rel_tec_etapa2_semana3.md
g5/projeto-final-antonio_carlos_ricardo/DesenvolvimentoDoProjeto/Fase3/Etapa3/: painel_solar_semmana2.md  rel_tec_etapa3_semana1.md  rel_tec_etapa3_semana2.md  rel_tec_etapa3_semana3.md  rel_tec_etapa3_semana4.md
g5/projeto-final-antonio_carlos_ricardo/DesenvolvimentoDoProjeto/Fase3/Etapa4/: rel_tec_etapa4_semana1.md  rel_tec_etapa4_semana2.md  rel_tec_etapa4_semana3.md  rel_tec_etapa4_semana4.md  trl_final_etapa4.md
g5/projeto-final-antonio_carlos_ricardo/DesenvolvimentoDoProjeto/Fase3/Etapa5/: Relatório_final (cópia).md
g5/projeto-final-antonio_carlos_ricardo/DocumentacaoFinalDoProjeto/: README.md
g5/projeto-final-antonio_carlos_ricardo/DocumentacaoFinalDoProjeto/Doc/: BillOfMaterial_With_Cost.ods
g5/projeto-final-antonio_carlos_ricardo/DocumentacaoFinalDoProjeto/Doc/Descricao_Hardware_Estacao/: Descricao_Projeto.md
g5/projeto-final-antonio_carlos_ricardo/DocumentacaoFinalDoProjeto/Doc/Manual_Usuário/: Manual_Usuario.md
g5/projeto-final-antonio_carlos_ricardo/DocumentacaoFinalDoProjeto/Hardware/MainBoard/: README.md
g5/projeto-final-antonio_carlos_ricardo/DocumentacaoFinalDoProjeto/Hardware/Pecas3D/: haste fixação painel solar.stl
g5/projeto-final-antonio_carlos_ricardo/DocumentacaoFinalDoProjeto/Hardware/WCM/: README.md
g5/projeto-final-antonio_carlos_ricardo/DocumentacaoFinalDoProjeto/Software/Main_Board/: CMakeLists.txt  ChangLog.md  README.md  main.c
g5/projeto-final-antonio_carlos_ricardo/DocumentacaoFinalDoProjeto/Software/TTN_Payload_Decode/: README.md  decoder0006.js
g5/projeto-final-antonio_carlos_ricardo/DocumentacaoFinalDoProjeto/Software/WCM/: README.md
g7/Embarcatech-Fase_3_P7/: README.md  main.c  pico_sdk_import.cmake
g7/Embarcatech-Fase_3_P7/etapa_2/src/: carrinho_seguidor_cor.c
g7/Embarcatech-Fase_3_P7/etapa_3/assets/3d_parts/: Part Studio 1_Luan - chassi.stl  Part Studio 1_Luan - encaixe_motor.stl  Part Studio 1_Luan - pino.stl  Part Studio 1_Luan - suporte_bitdoglab.stl  Part Studio 1_Luan - suporte_motor_dir.stl  Part Studio 1_Luan - suporte_motor_esq.stl  robo_movel.20260103-214814.FCBak  robo_movel.FCStd  suporte_sensor_cor.stl  suporte_sensor_dist.stl
g7/Embarcatech-Fase_3_P7/etapa_3/src/: gatt_client.py
g7/Embarcatech-Fase_3_P7/etapa_3/src/bt_gatt_server_4/: CMakeLists.txt  btstack_config.h  lwipopts.h  server.c  ucr.gatt  ws2812.pio
g7/Embarcatech-Fase_3_P7/etapa_3/src/bt_gatt_server_4/.cache/clangd/index/: btstack_config.h.869A56B985E3499C.idx  server.c.1D08A77BCD13450B.idx
g7/Embarcatech-Fase_3_P7/etapa_4/: CMakeLists.txt
(+389 files in other folders)
